--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </section> -->
 <!----спецификация-->
-    <!-- <section class="section spc">
+    <section class="section spc">
         <div class="container">
             <h2 class="section__title visually-hidden">Преимущества</h2>
         <ul class="spc__list list">
@@ -117,9 +117,9 @@
             </li>
         </ul>
         </div>
-    </section> -->
+    </section>
 <!----направление работы студии-->
-    <!-- <section class="section about-profession">
+    <section class="section about-profession">
         <div class="container">
         <h2 class="section__title" >Чем мы занимаемся</h2>
         <ul class="about-profession__list list">
@@ -154,9 +154,9 @@
             </li>
         </ul>
         </div>
-    </section> -->
+    </section>
 <!----команда и должности-->
-    <!-- <section class="section team">
+    <section class="section team">
     <div class="container">
     <h2 class="section__title" >Наша команда</h2>
 
@@ -314,7 +314,7 @@
         </li>
     </ul>
     </div>
-    </section> -->
+    </section>
     <!---------------------ПОСТОЯННЫЕ КЛИЕНТЫ----------------------->
     <section class="section clients">
         <div class="container">
