--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
     </ul>
 </div>
 
-</header>
-<main> -->
+</header>-->
+<main>
 <!----герой-->
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="container">
         <h1 class="hero__title center">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="btn" data-modal-open>Заказать услугу</button>
         </div>
-    </section> -->
+    </section>
 <!----спецификация-->
     <section class="section spc">
         <div class="container">
