--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <!----герой-->
     <section class="hero">
         <div class="container">
-        <h1 class="hero__title center">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="btn" data-modal-open>Заказать услугу</button>
         </div>
     </section>
