--- a/portfolio.html
+++ b/portfolio.html
@@ -19,23 +19,23 @@
     <link href="./css/main.min.css" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <div class="container nav">
+    <!-- <header class="header">
+        <div class="container nav"> -->
         <!--шапка-->
-        <nav class="nav">
+        <!-- <nav class="nav"> -->
             <!--логотип компании-->
-            <a class="logo" 
+            <!-- <a class="logo" 
             href="./index.html" 
-            lang="en">Web<span class="logo__black">Studio</span></a>   
+            lang="en">Web<span class="logo__black">Studio</span></a>    -->
             <!--ссылки шапки-->
-            <ul class="nav__list list">
+            <!-- <ul class="nav__list list">
                 <li class="nav__item"><a class="nav__link" href="./index.html">Студия</a></li>
                 <li class="nav__item"><a class="nav__link current" href="./portfolio.html">Портфолио</a></li>
                 <li class="nav__item"><a class="nav__link" href="">Контакты</a></li>
             </ul>
-        </nav>
+        </nav> -->
         <!--контакты-->
-        <ul class="contacts list">
+        <!-- <ul class="contacts list">
             <li class="contacts__item"><a class="contacts__link link" href="mailto:info@devstudio.com">
                 <svg class="contacts__icon" width="16" height="12">
                     <use href="./img/icon.svg#icon-mail"></use>
@@ -48,12 +48,12 @@
                 +38 096 111 11 11</a></li>
         </ul>
         </div>
-    </header>
+    </header> -->
     <!--портфолио-->
     <main>
-         <section class="section">
+         <section class="section__portfolio">
              <div class="container">
-                 <h1 class="port-title visually-hidden"></h1>
+                 <h1 class="port-title visually-hidden"></h1> 
         <!--ccылки навигации-->
         <ul class="filter-list list">
             <li class="filter-list__item"><button type="button" class="filter-list__btn current">Все</button></li>
@@ -69,9 +69,11 @@
                 <a class="project-list__link link" href="">
                     <div class="card">
                 <img src="./img/web-site.jpg" alt="веб-сайт на компьютере" width="370" height="294">
+
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                     для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                    шпионажа и атак на защищённые сервера конкурентов.
+                </p>
                 </div>
                 <div class="card__squad">
                 <h2 class="card__title">Технокряк</h2>
@@ -200,14 +202,14 @@
         </section>
     </main>
 <!---------------ПОДВАЛ---------------------------------->
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="container footer__container">
-        <div class="footer__block">
+        <div class="footer__block"> -->
             <!----логотип студии-->
-            <a class="logo logo--correct" href="./index.html" lang="en">Web<span class="logo__white">Studio</span></a>
+            <!-- <a class="logo logo--correct" href="./index.html" lang="en">Web<span class="logo__white">Studio</span></a> -->
             <!----адрес-->
-            <address>
-                <ul class="footer-list list">
+            <!-- <address> -->
+                <!-- <ul class="footer-list list">
                     <li class="footer-list__item footer-list__item--addres">г. Киев, пр-т Леси Украинки, 26
                     </li>
                     <li class="footer-list__item">
@@ -218,9 +220,9 @@
                     </li>
                 </ul>
             </address>
-        </div>
+        </div> -->
         <!-----БЛОК СОЦСЕТЕЙ----->
-        <div class="footer-social__block">
+        <!-- <div class="footer-social__block">
             <p class="footer-social__title">присоединяйтесь</p>
             <ul class="social-list list">
                 <li class="social-list__item">
@@ -268,6 +270,6 @@
         </div>
 
     </div>
-</footer>
+</footer> -->
 </body>
 </html>
