--- a/portfolio.html
+++ b/portfolio.html
@@ -68,11 +68,28 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                     <div class="card">
-                <img src="./img/web-site.jpg" alt="веб-сайт на компьютере" width="370" height="294">
+                        <picture>
+                            <source srcset="
+                            ./img/web-site.jpg 1x,
+                            ./img/desctop/project/pr-1-2x.jpg 2x
+                            " 
+                            media="(min-width:1200px)">
+                            <source srcset="
+                            ./img/tab/pr-tab/pr-tab-1-1x.jpg 1x, 
+                            ./img/tab/pr-tab/pr-tab-1-2x.jpg 2x
+                            "
+                             media="(min-width:768px)">
+                            <source srcset="
+                            ./img/mobile/pr-m/pr-m-1-1x.jpg 1x, 
+                            ./img/mobile/pr-m/pr-m-1-2x.jpg 2x
+                            " 
+                            media="(min-width:320px)">
+                            <img class="image" src="./img/web-site.jpg" alt="веб-сайт на компьютере">
+                        </picture>
+                <!-- <img src="./img/web-site.jpg" alt="веб-сайт на компьютере" width="370" height="294"> -->
 
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                    для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов.
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
                 </div>
                 <div class="card__squad">
@@ -85,7 +102,25 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                  <div class="card">
-                  <img src="./img/steffcurry.jpg" alt="постер с двумя баскетболистами"  width="370" height="294">
+                        <picture>
+                            <source srcset="
+                            ./img/steffcurry.jpg 1x,
+                            ./img/desctop/project/pr-2-2x.jpg 2x
+                            " 
+                            media="(min-width:1200px)">
+                            <source srcset="
+                            ./img/tab/pr-tab/pr-tab-2-1x.jpg 1x, 
+                            ./img/tab/pr-tab/pr-tab-2-2x.jpg 2x
+                            " 
+                            media="(min-width:768px)">
+                            <source srcset="
+                            ./img/mobile/pr-m/pr-m-2-1x.jpg 1x, 
+                            ./img/mobile/pr-m/pr-m-2-2x.jpg 2x
+                            " 
+                            media="(min-width:320px)">
+                            <img class="image" src="./img/steffcurry.jpg" alt="постер с двумя баскетболистами">
+                        </picture>
+                  <!-- <img src="./img/steffcurry.jpg" alt="постер с двумя баскетболистами"  width="370" height="294"> -->
                         
                   <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -100,7 +135,25 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                     <div class="card">
-                <img src="./img/seafood.jpg" alt="ресторан морепродуктов" width="370" height="294">
+                    <picture>
+                    <source srcset="
+                    ./img/seafood.jpg 1x,
+                    ./img/desctop/project/pr-3-2x.jpg 2x
+                    "
+                     media="(min-width:1200px)">
+                    <source srcset="
+                    ./img/tab/pr-tab/pr-tab-3-1x.jpg 1x, 
+                    ./img/tab/pr-tab/pr-tab-3-2x.jpg 2x
+                    "
+                     media="(min-width:768px)">
+                    <source srcset="
+                    ./img/mobile/pr-m/pr-m-3-1x.jpg 1x, 
+                    ./img/mobile/pr-m/pr-m-3-2x.jpg 2x
+                    "
+                     media="(min-width:320px)">
+                    <img class="image" src="./img/seafood.jpg" alt="ресторан морепродуктов">
+                                    </picture>
+                <!-- <img src="./img/seafood.jpg" alt="ресторан морепродуктов" width="370" height="294"> -->
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -114,7 +167,25 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                     <div class="card">
-                <img src="./img/primehdphns.jpg" alt="наушники" width="370" height="294">
+                     <picture>
+                            <source srcset="
+                            ./img/seafood.jpg 1x,
+                            ./img/desctop/project/pr-4-2x.jpg 2x
+                            " 
+                            media="(min-width:1200px)">
+                                <source srcset="
+                            ./img/tab/pr-tab/pr-tab-4-1x.jpg 1x, 
+                            ./img/tab/pr-tab/pr-tab-4-2x.jpg 2x
+                            " 
+                            media="(min-width:768px)">
+                                <source srcset="
+                            ./img/mobile/pr-m/pr-m-4-1x.jpg 1x, 
+                            ./img/mobile/pr-m/pr-m-4-2x.jpg 2x
+                            " 
+                            media="(min-width:320px)">
+                                <img class="image" src="./img/seafood.jpg" alt="ресторан морепродуктов">
+                            </picture>
+                <!-- <img src="./img/primehdphns.jpg" alt="наушники" width="370" height="294"> -->
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                     для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -129,7 +200,25 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                     <div class="card">
-                <img src="./img/boxes.jpg" alt="боксы" width="370" height="294">
+                        <picture>
+                <source srcset="
+                ./img/boxes.jpg 1x,
+                ./img/desctop/project/pr-5-2x.jpg 2x
+                " 
+                media="(min-width:1200px)">
+                <source srcset="
+                ./img/tab/pr-tab/pr-tab-5-1x.jpg 1x, 
+                ./img/tab/pr-tab/pr-tab-5-2x.jpg 2x
+                " 
+                media="(min-width:768px)">
+                <source srcset="
+                ./img/mobile/pr-m/pr-m-5-1x.jpg 1x, 
+                ./img/mobile/pr-m/pr-m-5-2x.jpg 2x
+                " 
+                media="(min-width:320px)">
+                <img class="image" src="./img/boxes.jpg" alt="боксы">
+                        </picture>
+                <!-- <img src="./img/boxes.jpg" alt="боксы" width="370" height="294"> -->
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -143,7 +232,25 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                     <div class="card">
-                <img src="./img/inspirmac.jpg" alt="монитор с веб-сайтом" width="370" height="294">
+                            <picture>
+                     <source srcset="
+                      ./img/inspirmac.jpg 1x,
+                      ./img/desctop/project/pr-6-2x.jpg 2x
+                      " 
+                      media="(min-width:1200px)">
+                      <source srcset="
+                      ./img/tab/pr-tab/pr-tab-6-1x.jpg 1x, 
+                      ./img/tab/pr-tab/pr-tab-6-2x.jpg 2x
+                      " 
+                      media="(min-width:768px)">
+                     <source srcset="
+                     ./img/mobile/pr-m/pr-m-6-1x.jpg 1x, 
+                     ./img/mobile/pr-m/pr-m-6-2x.jpg 2x
+                     " 
+                     media="(min-width:320px)">
+                      <img class="image" src="./img/inspirmac.jpg" alt="монитор с веб-сайтом">
+                            </picture>
+                <!-- <img src="./img/inspirmac.jpg" alt="монитор с веб-сайтом" width="370" height="294"> -->
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -157,7 +264,25 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                     <div class="card">
-                <img src="./img/booklimited.jpg" alt="издание" width="370" height="294">
+                            <picture>
+                     <source srcset="
+                      ./img/desctop/project/pr-7-1x 1x,
+                      ./img/desctop/project/pr-7-2x.jpg 2x
+                      " 
+                      media="(min-width:1200px)">
+                      <source srcset="
+                      ./img/tab/pr-tab/pr-tab-7-1x.jpg 1x, 
+                      ./img/tab/pr-tab/pr-tab-7-2x.jpg 2x
+                      "
+                      media="(min-width:768px)">
+                     <source srcset="
+                     ./img/mobile/pr-m/pr-m-7-1x.jpg 1x, 
+                     ./img/mobile/pr-m/pr-m-7-2x.jpg 2x
+                     " 
+                     media="(min-width:320px)">
+                      <img class="image" src="./img/desctop/project/pr-7-1x.jpg" alt="издание">
+                    </picture>
+                <!-- <img src="./img/booklimited.jpg" alt="издание" width="370" height="294"> -->
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -171,7 +296,25 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                 <div class="card">
-                <img src="./img/lab.jpg" alt="дизайнерская бирка" width="370" height="294">
+                            <picture>
+                     <source srcset="
+                      ./img/lab.jpg 1x,
+                      ./img/desctop/project/pr-8-2x.jpg 2x
+                      " 
+                      media="(min-width:1200px)">
+                      <source srcset="
+                      ./img/tab/pr-tab/pr-tab-8-1x.jpg 1x, 
+                      ./img/tab/pr-tab/pr-tab-8-2x.jpg 2x
+                      " 
+                      media="(min-width:768px)">
+                     <source srcset="
+                     ./img/mobile/pr-m/pr-m-8-1x.jpg 1x, 
+                     ./img/mobile/pr-m/pr-m-8-2x.jpg 2x
+                     " 
+                     media="(min-width:320px)">
+                      <img class="image" src="./img/lab.jpg" alt="дизайнерская бирка">
+                    </picture>
+                <!-- <img src="./img/lab.jpg" alt="дизайнерская бирка" width="370" height="294"> -->
                 <!--<div class="over-t">-->
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -187,7 +330,25 @@
             <li class="project-list__item">
                 <a class="project-list__link link" href="">
                     <div class="card">
-                <img src="./img/growingair.jpg" alt="проект на компьютере и руки" width="370" height="294">
+                            <picture>
+                     <source srcset="
+                      ./img/growingair.jpg 1x,
+                      ./img/desctop/project/pr-9-2x.jpg 2x
+                      " 
+                      media="(min-width:1200px)">
+                      <source srcset="
+                      ./img/tab/pr-tab/pr-tab-9-1x.jpg 1x, 
+                      ./img/tab/pr-tab/pr-tab-9-2x.jpg 2x
+                      " 
+                      media="(min-width:768px)">
+                     <source srcset="
+                     ./img/mobile/pr-m/pr-m-9-1x.jpg 1x, 
+                     ./img/mobile/pr-m/pr-m-9-2x.jpg 2x
+                     " 
+                     media="(min-width:320px)">
+                      <img class="image" src="./img/growingair.jpg" alt="проект на компьютере и руки">
+                    </picture>
+                <!-- <img src="./img/growingair.jpg" alt="проект на компьютере и руки" width="370" height="294"> -->
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
