--- a/index.html
+++ b/index.html
@@ -20,22 +20,48 @@
 </head>
 <body>
 <!-- шапка-->
-<!-- <header class="header">
+<header class="header">
 <div class="container nav">
 <nav class="nav">
-<!----логотип компании-->
-        <!-- <a class="logo" 
+<!--логотип компании -->
+        <a class="logo" 
         href="./index.html" 
         lang="en">Web<span 
         class="logo__black">Studio</span></a>
+        <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg width="24" height="16" aria-label="Переключатель мобильного меню">
+                <use class="icon-menu" href="./img/icon.svg#icon-strips"></use>
+                <use class="icon-cross" href="./img/icon.svg#icon-cross"></use>
+            </svg>
+        </button>
+            <ul class="menu-list list">
+                <li class="menu-list__item"></li>
+                <li class="menu-list__item"></li>
+                <li class="menu-list__item"></li>
+            </ul>
+            <ul class="menu-contacts-list list">
+                <li class="menu-contacts-list__item"></li>
+                <li class="menu-contacts-list__item"></li>
+            </ul>
+            <ul class="menu-social-list list">
+                <li class="menu-social-list__item"></li>
+                <li class="menu-social-list__item"></li>
+                <li class="menu-social-list__item"></li>
+                <li class="menu-social-list__item"></li>
+            </ul>
+            <!-- <svg width="24" height="16" aria-label="Переключатель мобильного меню">
+                <use class="icon-menu" href="./img/icon.svg#icon-strips"></use>
+                <use class="icon-cross" href="./img/icon.svg#icon-cross"></use>
+            </svg> -->
+      
 <!----ссылки шапки-->
-    <!-- <ul class="nav__list list"> -->
-            <!-- <li class="nav__item"><a class="nav__link current" href="./index.html">Студия</a></li>
+    <!-- <ul class="nav__list list">
+            <li class="nav__item"><a class="nav__link current" href="./index.html">Студия</a></li>
             <li class="nav__item"><a class="nav__link" href="./portfolio.html">Портфолио</a></li>
             <li class="nav__item"><a class="nav__link" href="">Контакты</a></li>
     </ul>
-</nav>    
-<!----контакты-->
+</nav>     -->
+<!--контакты-->
     <!-- <ul class="contacts list">
         <li class="contacts__item"><a class="contacts__link link" href="mailto:info@devstudio.com">
             <svg class="contacts__icon" width="16" height="12">
@@ -47,10 +73,10 @@
             <svg class="contacts__icon" width="10" height="16">
                 <use href="./img/icon.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a></li>
-    </ul>
+    <!--</ul>-->
 </div>
 
-</header>-->
+</header>
 <main>
 <!----герой-->
     <section class="hero">
@@ -445,6 +471,7 @@
 
     </section>
 </main>
+
 <!---------------ПОДВАЛ---------------------------------->
 <!-- <footer class="footer">
     <div class="container footer__container">
@@ -575,6 +602,15 @@
         </form>
     </div>
 </div>
+<div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu"></button>
+    <ul class="mobile-menu"></ul>
+    </div>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
 <script src="./js/modal.js"></script>
+
+<script defer src="./js/mobile-menu.js"></script>
 </body>
 </html>
