--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <!-- шапка-->
-<header class="header">
+<header class="header place">
 <div class="container nav">
 <nav class="nav">
 <!--логотип компании -->
@@ -28,41 +28,15 @@
         href="./index.html" 
         lang="en">Web<span 
         class="logo__black">Studio</span></a>
-        <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-            <svg width="24" height="16" aria-label="Переключатель мобильного меню">
-                <use class="icon-menu" href="./img/icon.svg#icon-strips"></use>
-                <use class="icon-cross" href="./img/icon.svg#icon-cross"></use>
-            </svg>
-        </button>
-            <ul class="menu-list list">
-                <li class="menu-list__item"></li>
-                <li class="menu-list__item"></li>
-                <li class="menu-list__item"></li>
-            </ul>
-            <ul class="menu-contacts-list list">
-                <li class="menu-contacts-list__item"></li>
-                <li class="menu-contacts-list__item"></li>
-            </ul>
-            <ul class="menu-social-list list">
-                <li class="menu-social-list__item"></li>
-                <li class="menu-social-list__item"></li>
-                <li class="menu-social-list__item"></li>
-                <li class="menu-social-list__item"></li>
-            </ul>
-            <!-- <svg width="24" height="16" aria-label="Переключатель мобильного меню">
-                <use class="icon-menu" href="./img/icon.svg#icon-strips"></use>
-                <use class="icon-cross" href="./img/icon.svg#icon-cross"></use>
-            </svg> -->
-      
 <!----ссылки шапки-->
-    <!-- <ul class="nav__list list">
+    <ul class="nav__list list">
             <li class="nav__item"><a class="nav__link current" href="./index.html">Студия</a></li>
             <li class="nav__item"><a class="nav__link" href="./portfolio.html">Портфолио</a></li>
             <li class="nav__item"><a class="nav__link" href="">Контакты</a></li>
     </ul>
-</nav>     -->
+</nav>    
 <!--контакты-->
-    <!-- <ul class="contacts list">
+    <ul class="contacts list">
         <li class="contacts__item"><a class="contacts__link link" href="mailto:info@devstudio.com">
             <svg class="contacts__icon" width="16" height="12">
             <use href="./img/icon.svg#icon-mail"></use>
@@ -73,8 +47,53 @@
             <svg class="contacts__icon" width="10" height="16">
                 <use href="./img/icon.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a></li>
-    <!--</ul>-->
-</div>
+    </ul>
+    <!--МОБИЛЬНОЕ МЕНЮ-->
+            <button type="button" class="open-menu-btn" data-menu-open>
+                <svg width="24" height="16" aria-label="Переключатель мобильного меню">
+                    <use class="icon-menu" href="./img/icon.svg#icon-strips"></use>
+                </svg>
+            </button>
+            <div class="mobile-menu is-hidden" data-menu>
+                <div class="container">
+                    <div class="mobile-menu-top">
+                <button type="button" class="close-menu-btn" data-menu-close>
+                <svg class="icon-cross" width="18" height="18">
+                    <use href="./img/icon.svg#icon-cross"></use>
+                </svg>
+                </button>
+                <ul class="menu-list list">
+                    <li class="mob-nav__item"><a class="mob-nav__link current" href="./index.html">Студия</a></li>
+                    <li class="mob-nav__item"><a class="mob-nav__link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="mob-nav__item"><a class="mob-nav__link" href="">Контакты</a></li>
+                    </ul>
+                    </div>
+                <div class="mobile-menu-bottom">
+                <ul class="mob-contacts list">
+                    <li class="mob-tel__item"><a class="mob-contacts__link link" href="tel:+380961111111">
+                            +38 096 111 11 11</a></li>
+                    <li class="mob-contacts__item"><a class="mob-contacts__link link" href="mailto:info@devstudio.com">
+                                    info@devstudio.com
+                                </a></li>
+                </ul>
+                <ul class="mob-social-list list">
+                    <li class="mob-social__item">
+                        <a href="" class="mob-social__link link">Instagram<a>
+                        </li>
+                    <li class="mob-social__item">
+                        <a href="" class="mob-social__link link">Twitter</a>
+                    </li>
+                    <li class="mob-social__item">
+                        <a href="" class="mob-social__link link">Facebook</a>
+                    </li>
+                    <li class="mob-social__item">
+                        <a href="" class="mob-social__link link">Linkedin</a>
+                    </li>
+
+                </ul>
+                </div>
+                </div>
+            </div>
 
 </header>
 <main>
@@ -602,15 +621,7 @@
         </form>
     </div>
 </div>
-<div class="menu-container js-menu-container" id="mobile-menu">
-    <button class="menu-toggle js-close-menu"></button>
-    <ul class="mobile-menu"></ul>
-    </div>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-        crossorigin="anonymous"></script>
 <script src="./js/modal.js"></script>
-
 <script defer src="./js/mobile-menu.js"></script>
 </body>
 </html>
