--- a/index.html
+++ b/index.html
@@ -492,13 +492,14 @@
 </main>
 
 <!---------------ПОДВАЛ---------------------------------->
-<!-- <footer class="footer">
+<footer class="footer">
     <div class="container footer__container">
+        <div class="tablet__container">
         <div class="footer__block">
 <!----логотип студии-->
-    <!-- <a class="logo logo--correct" href="./index.html" lang="en">Web<span class="logo__white">Studio</span></a> -->
+    <a class="logo logo--correct" href="./index.html" lang="en">Web<span class="logo__white">Studio</span></a>
 <!----адрес-->
-    <!-- <address>
+    <address>
         <ul class="footer-list list">
         <li class="footer-list__item footer-list__item--addres">г. Киев, пр-т Леси Украинки, 26
         </li>
@@ -509,10 +510,10 @@
                 <a class="footer-list__link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
-    </address> -->
-    <!-- </div> -->
+    </address>
+    </div>
     <!-----БЛОК СОЦСЕТЕЙ----->
-    <!-- <div class="footer-social__block">
+    <div class="footer-social__block">
         <p class="footer-social__title">присоединяйтесь</p>
         <ul class="social-list list">
             <li class="social-list__item">
@@ -544,6 +545,7 @@
                 </a>
             </li>
         </ul>
+        </div>
     </div>
         <div class="subscribe-form">
         <p class="footer-social__title">подпишитесь на рассылку</p>
@@ -560,7 +562,7 @@
         </div>
 
     </div>
-</footer> -->
+</footer>
 <!---------------МОДАЛЬНОЕ ОКНО--------->
 <div class="darkspace is-hidden" data-modal>
     <div class="modal">
