--- a/portfolio.html
+++ b/portfolio.html
@@ -19,23 +19,23 @@
     <link href="./css/main.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- <header class="header">
-        <div class="container nav"> -->
+    <header class="header place">
+        <div class="container nav">
         <!--шапка-->
-        <!-- <nav class="nav"> -->
+        <nav class="nav">
             <!--логотип компании-->
-            <!-- <a class="logo" 
+            <a class="logo" 
             href="./index.html" 
-            lang="en">Web<span class="logo__black">Studio</span></a>    -->
+            lang="en">Web<span class="logo__black">Studio</span></a>   
             <!--ссылки шапки-->
-            <!-- <ul class="nav__list list">
+            <ul class="nav__list list">
                 <li class="nav__item"><a class="nav__link" href="./index.html">Студия</a></li>
                 <li class="nav__item"><a class="nav__link current" href="./portfolio.html">Портфолио</a></li>
                 <li class="nav__item"><a class="nav__link" href="">Контакты</a></li>
             </ul>
-        </nav> -->
+        </nav>
         <!--контакты-->
-        <!-- <ul class="contacts list">
+        <ul class="contacts list">
             <li class="contacts__item"><a class="contacts__link link" href="mailto:info@devstudio.com">
                 <svg class="contacts__icon" width="16" height="12">
                     <use href="./img/icon.svg#icon-mail"></use>
@@ -47,8 +47,54 @@
             </svg>
                 +38 096 111 11 11</a></li>
         </ul>
+
+        <!--МОБИЛЬНОЕ МЕНЮ-->
+        <button type="button" class="open-menu-btn" data-menu-open>
+            <svg width="24" height="16" aria-label="Переключатель мобильного меню">
+                <use class="icon-menu" href="./img/icon.svg#icon-strips"></use>
+            </svg>
+        </button>
+        <div class="mobile-menu is-hidden" data-menu>
+            <div class="container">
+                <div class="mobile-menu-top">
+                    <button type="button" class="close-menu-btn" data-menu-close>
+                        <svg class="icon-cross" width="18" height="18">
+                            <use href="./img/icon.svg#icon-cross"></use>
+                        </svg>
+                    </button>
+                    <ul class="menu-list list">
+                        <li class="mob-nav__item"><a class="mob-nav__link" href="./index.html">Студия</a></li>
+                        <li class="mob-nav__item"><a class="mob-nav__link current" href="./portfolio.html">Портфолио</a></li>
+                        <li class="mob-nav__item"><a class="mob-nav__link" href="">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="mobile-menu-bottom">
+                    <ul class="mob-contacts list">
+                        <li class="mob-tel__item"><a class="mob-contacts__link link" href="tel:+380961111111">
+                                +38 096 111 11 11</a></li>
+                        <li class="mob-contacts__item"><a class="mob-contacts__link link" href="mailto:info@devstudio.com">
+                                info@devstudio.com
+                            </a></li>
+                    </ul>
+                    <ul class="mob-social-list list">
+                        <li class="mob-social__item">
+                            <a href="" class="mob-social__link link">Instagram<a>
+                        </li>
+                        <li class="mob-social__item">
+                            <a href="" class="mob-social__link link">Twitter</a>
+                        </li>
+                        <li class="mob-social__item">
+                            <a href="" class="mob-social__link link">Facebook</a>
+                        </li>
+                        <li class="mob-social__item">
+                            <a href="" class="mob-social__link link">Linkedin</a>
+                        </li>
+        
+                    </ul>
+                </div>
+            </div>
         </div>
-    </header> -->
+    </header>
     <!--портфолио-->
     <main>
          <section class="section__portfolio">
@@ -363,14 +409,15 @@
         </section>
     </main>
 <!---------------ПОДВАЛ---------------------------------->
-<!-- <footer class="footer">
+<footer class="footer">
     <div class="container footer__container">
-        <div class="footer__block"> -->
+        <div class="tablet__container">
+        <div class="footer__block">
             <!----логотип студии-->
-            <!-- <a class="logo logo--correct" href="./index.html" lang="en">Web<span class="logo__white">Studio</span></a> -->
+            <a class="logo logo--correct" href="./index.html" lang="en">Web<span class="logo__white">Studio</span></a>
             <!----адрес-->
-            <!-- <address> -->
-                <!-- <ul class="footer-list list">
+            <address>
+                <ul class="footer-list list">
                     <li class="footer-list__item footer-list__item--addres">г. Киев, пр-т Леси Украинки, 26
                     </li>
                     <li class="footer-list__item">
@@ -381,9 +428,9 @@
                     </li>
                 </ul>
             </address>
-        </div> -->
+        </div>
         <!-----БЛОК СОЦСЕТЕЙ----->
-        <!-- <div class="footer-social__block">
+        <div class="footer-social__block">
             <p class="footer-social__title">присоединяйтесь</p>
             <ul class="social-list list">
                 <li class="social-list__item">
@@ -415,6 +462,7 @@
                     </a>
                 </li>
             </ul>
+            </div>
         </div>
         <div class="subscribe-form">
             <p class="footer-social__title">подпишитесь на рассылку</p>
@@ -431,6 +479,7 @@
         </div>
 
     </div>
-</footer> -->
+</footer>
+<script defer src="./js/mobile-menu.js"></script>
 </body>
 </html>
