--- a/portfolio.html
+++ b/portfolio.html
@@ -132,11 +132,8 @@
                             media="(min-width:320px)">
                             <img class="image" src="./img/web-site.jpg" alt="веб-сайт на компьютере">
                         </picture>
-                <!-- <img src="./img/web-site.jpg" alt="веб-сайт на компьютере" width="370" height="294"> -->
-
                 <p class="card__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                    для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
                 <div class="card__squad">
                 <h2 class="card__title">Технокряк</h2>
