--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </ul>
     <!--МОБИЛЬНОЕ МЕНЮ-->
             <button type="button" class="open-menu-btn" data-menu-open>
-                <svg aria-label="Переключатель мобильного меню">
+                <svg width="24" height="16" aria-label="Переключатель мобильного меню">
                     <use class="icon-menu" href="./img/icon.svg#icon-strips"></use>
                 </svg>
             </button>
