--- a/portfolio.html
+++ b/portfolio.html
@@ -309,7 +309,7 @@
                     <div class="card">
                             <picture>
                      <source srcset="
-                      ./img/desctop/project/pr-7-1x 1x,
+                      ./img/desctop/project/pr-7-1x.jpg 1x,
                       ./img/desctop/project/pr-7-2x.jpg 2x
                       " 
                       media="(min-width:1200px)">
