--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <!--шапка-->
         <nav class="nav">
             <!--логотип компании-->
-            <a class="logo" 
+            <a class="logo space" 
             href="./index.html" 
             lang="en">Web<span class="logo__black">Studio</span></a>   
             <!--ссылки шапки-->
