--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="container nav">
 <nav class="nav">
 <!--логотип компании -->
-        <a class="logo" 
+        <a class="logo space" 
         href="./index.html" 
         lang="en">Web<span 
         class="logo__black">Studio</span></a>
