closed resume/ checked later

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
     <label for="user-comment" class="modal-form__label">Комментарий</label>
         <textarea name="user-comment" class="modal-form__comment" placeholder="Введите текст" id="user-comment"></textarea>
         </div>
-        <div class="modal-form__field">
+        <div class="modal-form__appol">
             <input type="checkbox" name="policy" id="modal-form__check" class="modal-form__check visually-hidden" />
             <label for="modal-form__check" class="modal-form__check-text">
                 <span>
