--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,12 @@
         </nav>
         <!--контакты-->
         <ul class="contacts list">
-            <li class="contacts__item"><a class="contacts__link link" href="mailto:info@devstudio.com">
+            <li class="contacts__item"><a class="contacts__link contacts__mail link" href="mailto:info@devstudio.com">
                 <svg class="contacts__icon" width="16" height="12">
                     <use href="./img/icon.svg#icon-mail"></use>
                 </svg>
                 info@devstudio.com</a></li>
-            <li class="contacts__item"><a class="contacts__link link" href="tel:+380961111111">
+            <li class="contacts__item"><a class="contacts__link contacts__tel link" href="tel:+380961111111">
             <svg class="contacts__icon" width="10" height="16">
                 <use href="./img/icon.svg#icon-smartphone"></use>
             </svg>
